@@ -47,6 +47,11 @@ public:
 	void sync_next_seq();
 	
 	static void send_error_reply(int sub_type, struct evhttp_request *req, const char *cb, const std::string &cname, const char *type, const char *content);
+	
+private:
+	void poll_send_start();
+	void poll_send_end();
+	void poll_send(int seq, const char *type, const char *content);
 };
 
 #endif
